<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.thoma.csispresentation.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/scrollView">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
            android:id="@+id/Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title1"
            android:textSize="18dp"
            android:textAllCaps="true"
            android:textStyle="bold"
                />

            <TextView
                android:id="@+id/Text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Title1"
                android:text="@string/Text1" />

            <TextView
                android:id="@+id/Title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Title2"
                android:layout_below="@id/Text1"
                android:textSize="18dp"
                android:textAllCaps="true"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/Text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Title2"
                android:text="@string/Text2" />

            <TextView
                android:id="@+id/Title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Text2"
                android:text="@string/Title3"
                android:textSize="18dp"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Title3"
                android:text="@string/Text3" />

        </RelativeLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/scrollView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        >


        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button"
            android:layout_weight="1"
            android:text="@string/Faculty"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/CourseGrid"
            android:id="@+id/button2"
            android:layout_weight="1"
            />
    </LinearLayout>

</RelativeLayout>
