<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.thoma.csispresentation.CourseGridActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/GridLayout"
        android:layout_above="@+id/scrollView"
        android:columnCount="3"
        android:rowCount="9"
        android:columnOrderPreserved="true"
        android:rowOrderPreserved="true">

        <TextView
            android:text="Semester"
            android:textSize="18dp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/cs"
            android:textSize="18dp"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/csis"
            android:textSize="18dp"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="1/FALL"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/cs"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/csis"
            android:layout_column="2"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="1/WINTER"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/cs"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/csis"
            android:layout_column="2"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="2/FALL"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/cs"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/csis"
            android:layout_column="2"
            android:layout_row="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="2/WINTER"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/cs"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/csis"
            android:layout_column="2"
            android:layout_row="4"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="3/FALL"
            android:layout_column="0"
            android:layout_row="5"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/cs"
            android:layout_column="1"
            android:layout_row="5"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/csis"
            android:layout_column="2"
            android:layout_row="5"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="3/WINTER"
            android:layout_column="0"
            android:layout_row="6"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/cs"
            android:layout_column="1"
            android:layout_row="6"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/csis"
            android:layout_column="2"
            android:layout_row="6"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="4/FALL"
            android:layout_column="0"
            android:layout_row="7"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/cs"
            android:layout_column="1"
            android:layout_row="7"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/csis"
            android:layout_column="2"
            android:layout_row="7"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="4/WINTER"
            android:layout_column="0"
            android:layout_row="8"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/cs"
            android:layout_column="1"
            android:layout_row="8"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/csis"
            android:layout_column="2"
            android:layout_row="8"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textAlignment="center"/>

    </GridLayout>

    <LinearLayout
        android:id="@+id/scrollView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        >


        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button"
            android:layout_weight="1"
            android:text="@string/Back"
            />
    </LinearLayout>

</RelativeLayout>
